# workwith-ai

./: .gitignore  .gitmodules  README-QA.md  README.md
agents/: .env
agents/dify/: .gitignore  reset-password.sh
cases/freelance/: .gitignore
cases/papers/: .gitignore
cases/papers/energyplus/: PNNL_Prototype_Scorecards.xlsx  README.md  convert-version.sh  run.sh
cms/ghost/: run.sh
cms/halo/: README.md  docker-compose-postgre.yaml  docker-compose.yaml
cms/omnivore/: README.md
cms/wordpress/: docker-compose.yml
database/bi/metabase/: docker-compose.yml  run.sh
database/postgresql/: docker-compose.yaml
database/supabase/: .gitignore  config.toml  enable-kong-ui.sh  get_docker_compose.yaml
database/supabase/docker/: .gitignore  docker-compose-kong.yaml  docker-compose-kong.yml  docker-compose-m.yaml  kong.yml  run-kong-mgt.sh
devops/bytebase/: .env
devops/ci/gitlab/: .gitignore  install.sh
devops/ci/trafik/: docker-compose.yaml  run.sh
devops/nocode/: README.md
devops/nocode/baserow/: README.md  docker-compose.yml  run-more.sh  run.sh
devops/nocode/nocodb/: run.sh
devops/testing-stacks/report/: README.md
docs/0-setup/: cursor-setup.md
docs/website/: cheatsheet-website.md  nextjs-project-template.md  personal-website.md
infra/docker/dify/: .env  README.md  (+2 more)
projects/data-agents/datafarm/: pyproject.toml  run.sh
projects/data-agents/datafarm/src/datafarm/: __init__.py
projects/localkits/: README.md  go.mod  main.go  wails.json
tools/localization/: tolgee.sh
tools/ngrok/: install.sh
tools/rustdesktop/: docker-compose.yaml
(+117 files in other folders)
