[project]
name = "datafarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DamnPatrick", email = "patrickwuke@163.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.4.248",
    "marimo>=0.11.0",
    "marker-pdf>=1.3.5",
]

[project.scripts]
datafarm = "datafarm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
